<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp16"
    tools:context=".ForgetPassActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp18"
        android:gravity="center"
        android:text="@string/recoverPassWithMail"
        android:textColor="@android:color/holo_purple"
        android:textSize="@dimen/sp26" />

    <EditText
        android:id="@+id/forgetPass_email"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp8"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/sp18" />

    <Button
        android:id="@+id/forgetPass_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp18"
        android:text="@string/retrievePassword"
        android:textAllCaps="false" />

</LinearLayout>