<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="@dimen/dp8">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_chat_24" />

    <TextView
        android:id="@+id/loginTXT"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/haveAccount"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="206dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/forgetPassTXT"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/forgotPass"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="274dp" />

    <TextView
        android:id="@+id/registerTXT"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/newAccount"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="352dp"
        android:textColor="@android:color/holo_green_dark"/>
</LinearLayout>